Fix scrollbar appearing changes layout

--- a/BoardGameSharingSystem-Frontend/src/assets/main.css
+++ b/BoardGameSharingSystem-Frontend/src/assets/main.css
@@ -15,7 +15,23 @@
   width: 100%;
   height: 100%;
   width: 100%;
+}
+html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+}
 
+html::-webkit-scrollbar {
+  width: 8px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 10px;
 }
 body {
   margin: 0;
@@ -24,6 +40,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 a,
 .green {
